--- a/index.html
+++ b/index.html
@@ -217,6 +217,16 @@
              
           </section>
       </div>
+<script>
+function toggleDetails() {
+    var details = document.getElementById('details');
+    if (details.style.display === 'none') {
+        details.style.display = 'block';
+    } else {
+        details.style.display = 'none';
+    }
+}
+</script>
         <!-- 按鈕 -->
         <div style="text-align: center;"> <!-- 添加这个div并设置其样式为居中 -->
           <a href="https://line.me/R/ti/p/@642mjtib?oat_content=url&ts=11061732" target="_blank">
