--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
   <div class="container marketing" style="max-width: 100%; padding: 2rem 1.5rem; background-color: #ffffff;">
     <section>
         <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3" style="font-size: 2rem; margin-top: 1rem; text-align: center;">為什麼6到10歲是兒童矯正『超級黃金期』？</h1>  
-        <div class="container-fluid px-0" style="margin-top: 1rem; background-color: #ffffff; max-width: 85%; margin-bottom: 2rem; max-width: 100%;">
+        <div class="container-fluid px-0" style="margin-top: 1rem; background-color: #ffffff; margin-bottom: 2rem; max-width: 100%;">
           <div style="padding: 2rem 2rem; border-radius: 10px;">
             <h2>1. 混合齒列期的關鍵時期</h2>
             <p class="lead" style="text-align: left;">6-10歲為混合齒列期，若孩子存在口呼吸或不正確的吞嚥方式，可能導致以下問題：</p> 
