--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="container-fluid">
           <!-- Logo -->
           <a href="https://www.inumagic.com/">
-            <img src="images/魔法牙醫新LOGO標準字(8個版)-09.png" alt="Inu Magic Logo" style="height: 3rem;">
+            <img src="LOGO09.png" alt="Inu Magic Logo" style="height: 3rem;">
           </a>
           <!-- Toggle button for smaller screens -->
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -343,7 +343,7 @@
     <div class="row flex-lg-row-reverse align-items-center g-4">
       <!-- 圖片區塊 -->
       <div class="col-10 col-sm-8 col-lg-5 mx-auto">
-        <img src="images/未命名設計 (1).png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="900" height="auto" loading="lazy">
+        <img src="smiles.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="900" height="auto" loading="lazy">
       </div>
       <!-- 文字區塊 -->
       <div class="col-lg-6 mx-auto fade-in">
