--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@
   <!-- Wrap the rest of the page in another container to center all the content. -->
 
 
-  <div class="container marketing" style="margin-top:0rem; max-width: 100%; padding: 0.5rem 0.5rem; background-color: #ffffff;">
+  <div class="container marketing" style="margin-top:0rem; max-width: 100%; padding: 0.5rem 0rem; background-color: #ffffff;">
     <section>
-        <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3" style="font-size: 2rem; text-align: center;">為什麼6到10歲是兒童矯正『超級黃金期』？</h1>  
-        <div class="container-fluid px-0" style="padding: 2rem 1.5rem; background-color: #ffffff; max-width: 100%; margin-bottom: 0rem; max-width: 100%;">
-           <h2>1. 混合齒列期的關鍵時期</h2>
+        <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-1" style="font-size: 2rem; text-align: center;">為什麼6到10歲是兒童矯正『超級黃金期』？</h1>  
+        <div class="container-fluid px-0" style="padding: 0.5rem 0.5rem; background-color: #ffffff; max-width: 100%; margin-bottom: 0rem; max-width: 100%;">
+           <h2 style="margin-top: 0.5rem;">1. 混合齒列期的關鍵時期</h2>
           <p class="lead" style="text-align: left;">6-10歲為混合齒列期，若孩子存在口呼吸或不正確的吞嚥方式，可能導致以下問題：</p> 
           <ul>
               <li><a style="font-weight: bold;">牙齒排列異常：</a>如牙齒暴牙或牙縫過大（牙開縫）。</li>
