--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
   <!-- Wrap the rest of the page in another container to center all the content. -->
 
 
-  <div class="container marketing" style="margin-top:0rem; max-width: 100%; padding: 0.5rem 0rem; background-color: #ffffff;">
+  <div class="container marketing" style="margin-top:0rem; max-width: 100%; padding: 0.5rem 2rem; background-color: #ffffff;">
     <section>
         <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-1" style="font-size: 2rem; text-align: center;">為什麼6到10歲是兒童矯正『超級黃金期』？</h1>  
         <div class="container-fluid px-0" style="padding: 0.5rem 0.5rem; background-color: #ffffff; max-width: 100%; margin-bottom: 0rem; max-width: 100%;">
@@ -157,7 +157,7 @@
     <div class="row flex-lg-row-reverse align-items-center g-4">
       <!-- 圖片區塊 -->
       <div class="col-10 col-sm-8 col-lg-5 mx-auto">
-        <img src="未命名-1.jpg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="900" height="auto" loading="lazy">
+        <img src="case.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="900" height="auto" loading="lazy">
       </div>
       <!-- 文字區塊 -->
       <div class="col-lg-6 mx-auto fade-in">
