--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
         border-radius: 10px; 
         background-color: #F98B88; 
         color: white; 
-        padding: 0.1rem 0.2rem; /* 增大按钮 */
+        padding: 0.5rem 0.5rem; /* 增大按钮 */
         border: none; 
-        font-size: 1.8rem; 
+        font-size: 1.5rem; 
         align-items: center;
         background-image: 
           linear-gradient(45deg, rgba(255, 255, 255, 0.2) 25%, transparent 25%, transparent 75%, rgba(255, 255, 255, 0.2) 75%, rgba(255, 255, 255, 0.2)),
@@ -121,9 +121,9 @@
 
   <div class="container marketing" style="margin-top:0rem; max-width: 100%; padding: 0.5rem 2rem; background-color: #ffffff;">
     <section>
-        <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-1" style="font-size: 2rem; text-align: center;">為什麼6到10歲是兒童矯正『超級黃金期』？</h1>  
+        <h1  style=" text-align: center;">為什麼6到10歲是兒童矯正『超級黃金期』？</h1>  
         <div class="container-fluid px-0" style="padding: 0.5rem 0.5rem; background-color: #ffffff; max-width: 100%; margin-bottom: 0rem; max-width: 100%;">
-           <h2 style="margin-top: 0.5rem;">1. 混合齒列期的關鍵時期</h2>
+           <h2>1. 混合齒列期的關鍵時期</h2>
           <p class="lead" style="text-align: left;">6-10歲為混合齒列期，若孩子存在口呼吸或不正確的吞嚥方式，可能導致以下問題：</p> 
           <ul>
               <li><a style="font-weight: bold;">牙齒排列異常：</a>如牙齒暴牙或牙縫過大（牙開縫）。</li>
@@ -153,15 +153,15 @@
 
 
 <div class="container-fluid px-0" style=" background-color: #f8f9fa; max-width: 100%;">
-  <div style="padding: 2rem 1.5rem; border-radius: 10px; max-width: 100%;">
+  <div style="padding: 2rem 1rem; border-radius: 10px; max-width: 100%;">
     <div class="row flex-lg-row-reverse align-items-center g-4">
       <!-- 圖片區塊 -->
       <div class="col-10 col-sm-8 col-lg-5 mx-auto">
-        <img src="case.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="900" height="auto" loading="lazy">
+        <img src="case.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="100%" height="auto" loading="lazy">
       </div>
       <!-- 文字區塊 -->
-      <div class="col-lg-6 mx-auto fade-in">
-        <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3" style="text-align: center; font-size: 2rem;">
+      <div class="col-lg-6 mx-auto fade-in" style="padding: 2rem 1rem;">
+        <h1 style="text-align: center; ">
           為何要做新式兒童矯正？
         </h1>
         <p class="lead" >
@@ -246,7 +246,7 @@
       </div>
       <!-- 文字區塊 -->
       <div class="col-lg-6 mx-auto fade-in">
-        <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3" style="font-size: 2rem;">
+        <h1 >
           潘韞珊院長及專業醫師團隊
         </h1>
         <p class="lead" style="font-weight: bold; color:#eb9794 ;">
@@ -258,7 +258,7 @@
         <p class="lead" style="font-weight: bold; color:#eb9794 ">
           看診超過23年            
         </p>
-        <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3" style="font-size: 2rem;">
+        <h1 >
           放寒假了！家長千萬別錯過！
         </h1>
         <!-- 按鈕 -->
@@ -279,7 +279,7 @@
   </div>
 </div>
 
-<h1 class="pb-2 border-bottom" style="text-align: center; font-size: 2rem; font-weight: bold;">新式矯正器</h1>
+<h1 class="pb-2 border-bottom" style="text-align: center;">新式矯正器</h1>
 
 <div class="album py-5 bg-body-tertiary">
   <div class="container" >
@@ -288,7 +288,7 @@
         <div class="card shadow-sm">
           <img class="bd-placeholder-img card-img-top" width="100%" height="auto" src="S__7208964.jpg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title></title><rect width="100%" height="100%"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em"></text></svg>
           <div class="card-body" style="background-color: #f8f9fa;">
-            <h3 style="font-size: 2rem; font-weight: bold; text-align: center; color: #F98B88;">法國矯正器</h3>
+            <h3 style="font-size: 1.5rem;  text-align: center; color: #F98B88;">法國矯正器</h3>
 
             <a href="https://line.me/R/ti/p/@642mjtib?oat_content=url&ts=11061732" style="display: flex; justify-content: center; align-items: center; ">
               <button type="button" class="btn btn-sm btn-outline-secondary">了解更多
@@ -305,7 +305,7 @@
         <div class="card shadow-sm">
           <img class="bd-placeholder-img card-img-top" width="100%" height="auto" src="578695_big.jpg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title></title><rect width="100%" height="100%"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em"></text></svg>
           <div class="card-body" style="background-color: #f8f9fa;">
-            <h3 style="font-size: 2rem; font-weight: bold; text-align: center; color: #F98B88;">澳洲矯正器</h3>
+            <h3 style="font-size: 1.5rem; text-align: center; color: #F98B88;">澳洲矯正器</h3>
 
             <a href="https://line.me/R/ti/p/@642mjtib?oat_content=url&ts=11061732" style="display: flex; justify-content: center; align-items: center; ">
               <button type="button" class="btn btn-sm btn-outline-secondary">了解更多
@@ -321,7 +321,7 @@
           <div class="card shadow-sm">
             <img class="bd-placeholder-img card-img-top" width="100%" height="auto" src="工作區域 1@4xcopy.png" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title></title><rect width="100%" height="100%"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em"></text></svg>
             <div class="card-body" style="background-color: #f8f9fa;">
-              <h3 style="font-size: 2rem; font-weight: bold; text-align: center; color: #F98B88;">日本矯正器</h3>
+              <h3 style="font-size: 1.5rem; text-align: center; color: #F98B88;">日本矯正器</h3>
 
               <a href="https://line.me/R/ti/p/@642mjtib?oat_content=url&ts=11061732" style="display: flex; justify-content: center; align-items: center; ">
                 <button type="button" class="btn btn-sm btn-outline-secondary">了解更多
@@ -347,8 +347,8 @@
       </div>
       <!-- 文字區塊 -->
       <div class="col-lg-6 mx-auto fade-in">
-        <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3" style="font-size: 2rem;">
-          兒童牙齒矯正 - 投資未來，讓孩子從小建立自信與美麗的笑容！
+        <h1>
+          兒童矯正 - 投資未來，讓孩子從小建立自信與美麗的笑容！
         </h1>
         <p class="lead">
           牙齒整齊不僅是美觀，更是健康的基石！
@@ -376,6 +376,10 @@
     </div>
   </div>
 </div>
+
+
+
+
 
 
 
