--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
 </div>
 
 
-<div class="container-fluid px-0" style=" background-color: #f8f9fa; max-width: 100%;">
-  <div style="padding: 2rem 1rem; border-radius: 10px; max-width: 100%;">
+<div class="container-fluid px-0" style="　 background-color: #f8f9fa; max-width: 100%;">
+  <div style="padding: １rem 1rem; border-radius: 10px; max-width: 100%;">
     <div class="row flex-lg-row-reverse align-items-center g-4">
       <!-- 圖片區塊 -->
       <div class="col-10 col-sm-8 col-lg-5 mx-auto">
@@ -245,39 +245,37 @@
         <img src="0108.jpg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="900" height="auto" loading="lazy">
       </div>
       <!-- 文字區塊 -->
-      <div class="col-lg-6 mx-auto fade-in">
-        <h1 >
+      <div class="col-lg-6 mx-auto fade-in" style="display: flex; flex-direction: column; align-items: center; justify-content: center;">
+        <h1>
           潘韞珊院長及專業醫師團隊
         </h1>
-        <p class="lead" style="font-weight: bold; color:#eb9794 ;">
+        <p class="lead" style="font-weight: bold; color:#eb9794;">
           美國整體醫學博士        
         </p>
-        <p class="lead" style="font-weight: bold; color:#eb9794" >
+        <p class="lead" style="font-weight: bold; color:#eb9794">
           研究所教授            
         </p>
-        <p class="lead" style="font-weight: bold; color:#eb9794 ">
+        <p class="lead" style="font-weight: bold; color:#eb9794">
           看診超過23年            
         </p>
-        <h1 >
+        <h1>
           放寒假了！家長千萬別錯過！
         </h1>
         <!-- 按鈕 -->
-          <a href="https://line.me/R/ti/p/@642mjtib?oat_content=url&ts=11061732" target="_blank">
-              <button type="button" class="elementory-button-text" 
-                      style="border-radius: 10px; background-color: #F98B88; color: white; padding: 10px; border: none; font-size: 1.8rem; align-items: center;background-image: 
-                      linear-gradient(45deg, rgba(255, 255, 255, 0.2) 25%, transparent 25%, transparent 75%, rgba(255, 255, 255, 0.2) 75%, rgba(255, 255, 255, 0.2)),
-                      linear-gradient(45deg, rgba(255, 255, 255, 0.2) 25%, transparent 25%, transparent 75%, rgba(255, 255, 255, 0.2) 75%, rgba(255, 255, 255, 0.2));
-                  background-size: 20px 20px; /* 设置格子大小 */
-                  background-position: 0 0, 10px 10px;">
-                馬上咨詢
-              </button>
-          </a>
-      </div>
-  
+        <a href="https://line.me/R/ti/p/@642mjtib?oat_content=url&ts=11061732" target="_blank" style="display: flex; justify-content: center; width: 100%;">
+          <button type="button" class="elementory-button-text" 
+                  style="border-radius: 10px; background-color: #F98B88; color: white; padding: 10px; border: none; font-size: 1.8rem; align-items: center;background-image: 
+                  linear-gradient(45deg, rgba(255, 255, 255, 0.2) 25%, transparent 25%, transparent 75%, rgba(255, 255, 255, 0.2) 75%, rgba(255, 255, 255, 0.2)),
+                  linear-gradient(45deg, rgba(255, 255, 255, 0.2) 25%, transparent 25%, transparent 75%, rgba(255, 255, 255, 0.2) 75%, rgba(255, 255, 255, 0.2));
+                  background-size: 20px 20px; background-position: 0 0, 10px 10px;">
+            馬上咨詢
+          </button>
+        </a>
       </div>
     </div>
   </div>
 </div>
+
 
 <h1 class="pb-2 border-bottom" style="text-align: center;">新式矯正器</h1>
 
