--- a/index.html
+++ b/index.html
@@ -152,15 +152,17 @@
 </div>
 
 
-<div class="container-fluid px-0" style="　 background-color: #f8f9fa; max-width: 100%;">
-  <div style="padding: １rem 1rem; border-radius: 10px; max-width: 100%;">
+
+
+<div class="container-fluid px-0" style="background-color: #ffffff; max-width: 100%;">
+  <div style="padding: 1rem 3rem; border-radius: 10px; max-width: 100%;">
     <div class="row flex-lg-row-reverse align-items-center g-4">
       <!-- 圖片區塊 -->
       <div class="col-10 col-sm-8 col-lg-5 mx-auto">
         <img src="case.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="100%" height="auto" loading="lazy">
       </div>
       <!-- 文字區塊 -->
-      <div class="col-lg-6 mx-auto fade-in" style="padding: 2rem 1rem;">
+      <div class="container-fluid px-0" style="padding-top: 0.5rem; padding-bottom: 0.5rem; padding-left: 2rem; padding-right: 2rem; background-color: #ffffff; max-width: 100%; margin-bottom: 0rem;">
         <h1 style="text-align: center; ">
           為何要做新式兒童矯正？
         </h1>
