--- a/index.html
+++ b/index.html
@@ -155,14 +155,16 @@
 
 
 <div class="container-fluid px-0" style="background-color: #ffffff; max-width: 100%;">
-  <div style="padding: 1rem 3rem; border-radius: 10px; max-width: 100%;">
+  <div style="padding: 0.5rem 3rem; border-radius: 10px; max-width: 100%;">
     <div class="row flex-lg-row-reverse align-items-center g-4">
       <!-- 圖片區塊 -->
       <div class="col-10 col-sm-8 col-lg-5 mx-auto">
         <img src="case.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="100%" height="auto" loading="lazy">
-      </div>
-      <!-- 文字區塊 -->
-      <div class="container-fluid px-0" style="padding-top: 0.5rem; padding-bottom: 0.5rem; padding-left: 2rem; padding-right: 2rem; background-color: #ffffff; max-width: 100%; margin-bottom: 0rem;">
+    </div>
+    
+      <div class="container-fluid px-0" style="padding-left: 2rem; padding-right: 2rem; background-color: #ffffff; max-width: 100%; ">
+        <p class="lead" style="text-align: center;">案例分享</p>
+
         <h1 style="text-align: center; ">
           為何要做新式兒童矯正？
         </h1>
