--- a/index.html
+++ b/index.html
@@ -253,13 +253,13 @@
         <h1>
           潘韞珊院長及專業醫師團隊
         </h1>
-        <p class="lead" style="font-weight: bold; color:#eb9794;">
+        <p class="lead">
           美國整體醫學博士        
         </p>
-        <p class="lead" style="font-weight: bold; color:#eb9794">
+        <p class="lead">
           研究所教授            
         </p>
-        <p class="lead" style="font-weight: bold; color:#eb9794">
+        <p class="lead">
           看診超過23年            
         </p>
         <h1>
@@ -281,7 +281,7 @@
 </div>
 
 
-<h1 class="pb-2 border-bottom" style="text-align: center;">新式矯正器</h1>
+<h1 style="text-align: center ;color: #ffffff; background-color: #F98B88; padding: 10px; border-radius: 8px; box-shadow: 2px 2px 4px #000000;">新式矯正器</h1>
 
 <div class="album py-5 bg-body-tertiary">
   <div class="container" >
