--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
   <!-- FOOTER -->
   <footer class="container" style="margin-top: 2rem;">
     <p class="float-end"><a href="#">回首頁</a></p>
-    <p>&copy; 2025 魔法牙醫診所. 版權所有.  &middot; </p>
+    <p style="line-height: 1.5rem;"> &copy; 2025 魔法牙醫診所. 版權所有.  &middot; </p>
   </footer>
 </main>
 
