--- a/index.html
+++ b/index.html
@@ -266,15 +266,18 @@
           放寒假了！家長千萬別錯過！
         </h1>
         <!-- 按鈕 -->
-        <a href="https://line.me/R/ti/p/@642mjtib?oat_content=url&ts=11061732" target="_blank" style="display: flex; justify-content: center; width: 100%;">
-          <button type="button" class="elementory-button-text" 
-                  style="border-radius: 10px; background-color: #F98B88; color: white; padding: 10px; border: none; font-size: 1.8rem; align-items: center;background-image: 
-                  linear-gradient(45deg, rgba(255, 255, 255, 0.2) 25%, transparent 25%, transparent 75%, rgba(255, 255, 255, 0.2) 75%, rgba(255, 255, 255, 0.2)),
-                  linear-gradient(45deg, rgba(255, 255, 255, 0.2) 25%, transparent 25%, transparent 75%, rgba(255, 255, 255, 0.2) 75%, rgba(255, 255, 255, 0.2));
-                  background-size: 20px 20px; background-position: 0 0, 10px 10px;">
-            馬上咨詢
-          </button>
-        </a>
+        <div style="text-align: center;"> <!-- 添加这个div并设置其样式为居中 -->
+          <a href="https://line.me/R/ti/p/@642mjtib?oat_content=url&ts=11061732" target="_blank">
+              <button type="button" class="elementory-button-text" 
+                      style="border-radius: 10px; background-color: #F98B88; color: white; padding: 10px; border: none; font-size: 1.8rem; align-items: center;background-image: 
+                      linear-gradient(45deg, rgba(255, 255, 255, 0.2) 25%, transparent 25%, transparent 75%, rgba(255, 255, 255, 0.2) 75%, rgba(255, 255, 255, 0.2)),
+                      linear-gradient(45deg, rgba(255, 255, 255, 0.2) 25%, transparent 25%, transparent 75%, rgba(255, 255, 255, 0.2) 75%, rgba(255, 255, 255, 0.2));
+                  background-size: 20px 20px; /* 设置格子大小 */
+                  background-position: 0 0, 10px 10px;">
+                馬上咨詢
+              </button>
+          </a>
+      </div>
       </div>
     </div>
   </div>
@@ -423,8 +426,20 @@
 
   <!-- FOOTER -->
   <footer class="container" style="margin-top: 2rem;">
-    <p class="float-end"><a href="#">回首頁</a></p>
-    <p style="line-height: 1.5rem;"> &copy; 2025 魔法牙醫診所. 版權所有.  &middot; </p>
+    <p style="line-height: 1.5rem;"> &copy; 2025 魔法牙醫診所. 版權所有  &middot; </p>
+    <div style="text-align: left;">
+    <a href="https://www.inumagic.com/" target="_blank" style="color: black;">
+      <p class="lead">魔法牙醫診所</p>
+    </a>
+    <p class="lead">地址：台北市中山區南京東路三段9號3樓</p>
+    <p class="lead">電話號碼：02-25021826</p>
+    <a href="https://line.me/R/ti/p/@642mjtib?oat_content=url&ts=11061732" target="_blank" style="color: black;">
+      <p class="lead">LINE</p>
+    </a>
+  </div>
+
+
+
   </footer>
 </main>
 
