--- a/index.html
+++ b/index.html
@@ -188,10 +188,11 @@
         <p class="lead" >
           幫助孩子從小建立整體健康基礎            
         </p>
-
         <p class="lead" >
+          現在就一起了解 [整體醫學新知]！
+
          
-          <span type="button" class="btn-link" onclick="toggleDetails()"> 現在就一起了解 [整體醫學新知]！</span>
+          <span type="button" class="btn-link" onclick="toggleDetails()">見詳文</span>
 
         </p>
         <div id="details">
