--- a/index.html
+++ b/index.html
@@ -56,23 +56,13 @@
   <body>
     
     <header>
-      <nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background-color:#ffffff;">
+      <nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background-color:#F98B88;">
         <div class="container-fluid">
           <!-- Logo -->
           <a href="https://www.inumagic.com/">
-            <img src="LOGO09.png" alt="Inu Magic Logo" style="height: 3rem;">
+            <img src="logo-white2.png" alt="Inu Magic Logo" style="height: 3rem;">
           </a>
           <!-- Toggle button for smaller screens -->
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <!-- Navbar content -->
-          <div class="collapse navbar-collapse" id="navbarCollapse">
-            <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                       <!-- Add other navbar items here if needed -->
-            </ul>
-            <!-- Line button -->
-          </div>
         </div>
       </nav>
     </header>
