--- a/index.html
+++ b/index.html
@@ -77,20 +77,19 @@
         <div class="container-fluid d-flex justify-content-between align-items-center">
           <!-- Logo -->
           <a href="https://www.inumagic.com/">
-            <img src="logo-white2.png" alt="Inu Magic Logo" style="height: 3rem;">
+            <img src="logo-white2.png" alt="Inu Magic Logo" style="height: 2.5rem;">
           </a>
           
           <!-- 按鈕區塊 -->
-          <div class="d-flex align-items-center">
+          <div class="d-flex align-items-center gap-2">
             <a href="https://line.me/R/ti/p/@642mjtib?oat_content=url&ts=11061732" target="_blank">
-              <button class="btn btn-link rounded-pill px-2 mx-1" type="button" style="color: white;">LINE</button>
+              <button class="btn btn-link rounded-pill px-2" type="button" style="color: white; font-size: 0.8rem;">LINE</button>
             </a>
             <a href="https://www.facebook.com/inumagic/" target="_blank">
-              <button class="btn btn-link rounded-pill px-2 mx-1" type="button" style="color: white;">Facebook</button>
+              <button class="btn btn-link rounded-pill px-2" type="button" style="color: white; font-size: 0.8rem;">Facebook</button>
             </a>
           </div>
           
-          <!-- Toggle button for smaller screens -->
         </div>
       </nav>
     </header>
