--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                 <div class="h-100 d-inline-flex align-items-center">
                     <a class="btn btn-sm-square rounded-circle bg-white text-primary me-1" href="https://www.facebook.com/inumagic"><i class="fab fa-facebook-f"></i></a>
                     <a class="btn btn-sm-square rounded-circle bg-white text-primary me-0" href="https://www.instagram.com/magic_dental_care"><i class="fab fa-instagram"></i></a>
+                    <a class="btn btn-sm-square rounded-circle bg-white text-primary me-0" href="https://lin.ee/Qxmw6FR"><i class="fa fa-headphones"></i></a>
                 </div>
             </div>
         </div>
@@ -72,7 +73,7 @@
 
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0 wow fadeIn" data-wow-delay="0.1s">
-        <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
+        <a href="https://inumagic.github.io/orthodontics/" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
             <h1 class="m-0 text-primary"></i><img src="img/logo (2).png" style="width: 50%;"></h1>
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -80,12 +81,12 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
-                <a href="index.html" class="nav-item nav-link">首頁</a>
+                <a href="https://inumagic.github.io/orthodontics/" class="nav-item nav-link">首頁</a>
                 <a href="https://inumagic.com" class="nav-item nav-link">關於我們</a>
                 <a href="#" class="nav-item nav-link active">兒童新式矯正兩萬元起！</a>
-                <a href="https://lin.ee/vJDonLM" class="nav-item nav-link">聯繫我們</a>
+                <a href="https://lin.ee/Qxmw6FR" class="nav-item nav-link">聯繫我們</a>
             </div>
-            <a href="https://lin.ee/vJDonLM" class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block">馬上諮詢<i class="fa fa-arrow-right ms-3"></i></a>
+            <a href="https://lin.ee/Qxmw6FR" class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block">馬上諮詢<i class="fa fa-arrow-right ms-3"></i></a>
         </div>
     </nav>
     <!-- Navbar End -->
@@ -179,7 +180,7 @@
     }
                     </style>
                     <div style="text-align: center;">
-                    <a class="btn btn-primary rounded-pill py-3 px-5 mt-3" href="https://lin.ee/vJDonLM" >馬上諮詢</a>
+                    <a class="btn btn-primary rounded-pill py-3 px-5 mt-3" href="https://lin.ee/Qxmw6FR" >馬上諮詢</a>
                     </div>
                 </div>
             </div>
@@ -269,7 +270,7 @@
                     <h5>3. 改善健康問題</h5>
                     <p>透過矯正可有效改善因口腔結構問題引發的鼻子過敏、鼻塞等症狀，提升呼吸道健康。</p>
                     <div style="text-align: center;">
-                        <a class="btn btn-primary rounded-pill py-3 px-5 mt-3" href="https://lin.ee/vJDonLM">馬上諮詢</a>
+                        <a class="btn btn-primary rounded-pill py-3 px-5 mt-3" href="https://lin.ee/Qxmw6FR">馬上諮詢</a>
                         </div>
                 </div>
                 </div>
@@ -385,6 +386,7 @@
                     <div class="d-flex pt-2">
                         <a class="btn btn-outline-light btn-social rounded-circle" href="https://www.facebook.com/inumagic"><i class="fab fa-facebook-f"></i></a>
                         <a class="btn btn-outline-light btn-social rounded-circle" href="http://www.youtube.com/@inumagic999"><i class="fab fa-youtube"></i></a>
+                        <a class="btn btn-outline-light btn-social rounded-circle" href="https://lin.ee/Qxmw6FR"><i class="fa fa-headphones"></i></a>
                     </div>
                 </div>
                 </div>
