--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
         <div class="container">
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
-                    <div class="d-flex flex-column">
+                    <div class="d-flex flex-column align-items-center">
                         <img class="img-fluid rounded w-75 align-self-end" src="img/smiles.png" alt="">
                     </div>
                 </div>
