--- a/index.html
+++ b/index.html
@@ -249,13 +249,14 @@
     <div class="container-xxl py-5">
         <h1 class="mb-4">為什麼6到10歲是兒童矯正『超級黃金期』？</h1>
 
-        <div class="container">
-            <div class="row g-5">
-                <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
-                    <div class="d-flex flex-column align-items-center">
-                        <img class="img-fluid rounded w-75 align-self-end" src="img/smiles.png" alt="">
+        <div class="container-xxl py-5">
+            <div class="container">
+                <div class="row g-5">
+                    <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
+                        <div class="d-flex flex-column align-items-center">
+                            <img class="img-fluid rounded w-75 mx-auto" src="img/smiles.png" alt="">
+                        </div>
                     </div>
-                </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                    <!-- <p class="d-inline-block border rounded-pill py-1 px-4"></p>-->
                    <h5>1. 混合齒列期的關鍵時期</h5>
