--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-light mb-4">延伸閱讀</h5>
-                    <a class="btn btn-link" href="https://inumagic.github.io/inumagic-mrc/">兒童新式矯正兩萬元起！</a>
+                    <a class="btn btn-link" href="https://inumagic.github.io/inumagic-mrc/">隱形矯正68000元起！</a>
                     <a class="btn btn-link" href="https://inumagic.github.io/periodontitis/">牙凍齡攻略：讓你越笑越年輕！</a>
              
                 </div>
