--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <title>魔法矯正 | 兒童新式矯正兩萬元起！</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
+    <meta content="魔法牙診所 | 兒童新式矯正" name="keywords">
+    <meta content="兒童新式矯正 – 健康、美觀，讓孩子擁有自信微笑！" name="description">
 
     <!-- Favicon -->
     <link href="img/icon-logo(1).png" rel="icon">
