--- a/index.html
+++ b/index.html
@@ -277,6 +277,7 @@
                 </div>
                 </div>
                 </div>
+    </div>
     
     
     <h1 style="text-align: center ;color: #ffffff; background-color: #5DADE2; padding: 10px; border-radius: 8px; box-shadow: 2px 2px 4px #000000;">新式矯正器</h1>
