--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
                 <a href="https://inumagic.com" class="nav-item nav-link">關於我們</a>
                 <a href="#" class="nav-item nav-link active">兒童新式矯正兩萬元起！</a>
                 <a href="https://inumagic.github.io/orthodontics/on-going-treatment.html" class="nav-item nav-link ">矯正注意事項</a>
+                <a href="q&a.html" class="nav-item nav-link ">常見問題</a>
                 <a href="https://lin.ee/Qxmw6FR" class="nav-item nav-link">聯繫我們</a>
             </div>
             <a href="https://lin.ee/Qxmw6FR" class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block">馬上諮詢<i class="fa fa-arrow-right ms-3"></i></a>
