--- a/b.html
+++ b/b.html
@@ -174,7 +174,7 @@
           <div class="bg-light rounded text-center" style="padding: 30px;">
             <h5>6至10歲是關鍵！早矯正，少煩惱！孩子未來更自信！</h5>
             <img class="img-fluid " src="img/b.png" style="width: 100%; height: auto; object-fit: cover; margin-bottom: 1rem;" alt="">
-            <a href="" class="btn btn-primary py-2 px-4">馬上預約</a>
+            <a href="https://lin.ee/cZhL9bC" class="btn btn-primary py-2 px-4">馬上預約</a>
           </div>
         </div>
       </div>
