--- a/b.html
+++ b/b.html
@@ -104,14 +104,7 @@
 
           <!-- News Text -->
           <div class="news-text">
-            <h2>一、為什麼「正確吞口水」要嘴巴閉上、舌頭頂住上顎？</h2>
-            <p>當我們「吞口水」時，<strong>正確的方式是——</strong>
-            <br>1. 嘴巴合起來
-            <br>2. 舌頭用力頂住上顎（硬顎部位）
-            <br>3. 不推牙齒，而是「封閉口腔」產生負壓
-            <br>這樣才能順利將口水與食物推進食道，進入消化道。若嘴巴張開，是難以產生足夠負壓完成吞嚥的。</p>
-            <img src="img/1.jpg" width="100%" height="auto">
-            <h2>二、錯誤的吞嚥模式會造成什麼後果？</h2>
+            <h2>一、錯誤的吞嚥模式會造成什麼後果？</h2>
             <p>許多人不自覺使用<strong>錯誤方式：</strong>
             <br>1. 舌頭推向牙齒來封閉口腔
             <br>2. 舌頭肥大無力或舌繫帶過短</p>
@@ -122,6 +115,14 @@
             <br>4. 睡眠品質差、白天疲倦、學習力下降
             <br>5. 成人更可能導致牙周病、姿勢不良（腰痠背痛、駝背）
             <br><strong> 錯誤吞嚥習慣從嬰兒吸奶就可能開始，一旦錯過6～10歲矯正超級黃金期，後續治療難度與時間將倍增！</strong></p>
+            <h2>二、為什麼「正確吞口水」要嘴巴閉上、舌頭頂住上顎？</h2>
+            <p>當我們「吞口水」時，<strong>正確的方式是——</strong>
+            <br>1. 嘴巴合起來
+            <br>2. 舌頭用力頂住上顎（硬顎部位）
+            <br>3. 不推牙齒，而是「封閉口腔」產生負壓
+            <br>這樣才能順利將口水與食物推進食道，進入消化道。若嘴巴張開，是難以產生足夠負壓完成吞嚥的。</p>
+            <img src="img/1.jpg" width="100%" height="auto">
+            
             <h2>三、舌頭真的這麼重要嗎？</h2>
             <p><strong>當然！</strong>
             <br>成人平均一天吞嚥次數超過 1000 次，十年將達 365 萬次，若每次都頂到牙齒，等於牙齒天天在「受壓推擠」，不只讓牙齒位移，還可能導致牙周病！
