--- a/b.html
+++ b/b.html
@@ -162,15 +162,22 @@
 
           <div class="d-flex rounded overflow-hidden mb-3">
             <img class="img-fluid" src="img/95.png" style="width: 100px; height: 100px; object-fit: cover;" alt="">
-            <a href="a.html" class="h5 d-flex align-items-center bg-light px-3 mb-0" 
+            <a href="https://inumagic.github.io/orthodontics/a.html" class="h5 d-flex align-items-center bg-light px-3 mb-0" 
               style="height: 100px; width: 100%; display: flex; align-items: center;">MRC功能性矯正裝置｜注意事項說明</a>
           </div>
 
           <div class="d-flex rounded overflow-hidden mb-3">
             <img class="img-fluid" src="img/ia.jpg" style="width: 100px; height: 100px; object-fit: cover;" alt="">
-            <a href="ia.html" class="h5 d-flex align-items-center bg-light px-3 mb-0" 
-              style="height: 100px; width: 100%; display: flex; align-items: center;">隱形矯正療程注意事項</a>
+            <a href="" class="h5 d-flex align-items-center bg-light px-3 mb-0" 
+              style="height: 100px; width: 100%; display: flex; align-items: center;">隱形矯正68000元起！</a>
           </div>
+
+         <div class="d-flex rounded overflow-hidden mb-3">
+            <img class="img-fluid" src="img/2.png" style="width: 100px; height: 100px; object-fit: cover;" alt="">
+            <a href="" class="h5 d-flex align-items-center bg-light px-3 mb-0" 
+              style="height: 100px; width: 100%; display: flex; align-items: center;">以為只是打呼？小心是致命的睡眠呼吸中止症！</a>
+          </div>
+            
           <h4 class="d-inline-block text-primary text-uppercase border-bottom border-5 mb-4">預約諮詢</h4>
           <div class="bg-light rounded text-center" style="padding: 30px;">
             <h5>6至10歲是關鍵！早矯正，少煩惱！孩子未來更自信！</h5>
