--- a/b.html
+++ b/b.html
@@ -174,7 +174,7 @@
 
          <div class="d-flex rounded overflow-hidden mb-3">
             <img class="img-fluid" src="img/2.png" style="width: 100px; height: 100px; object-fit: cover;" alt="">
-            <a href="" class="h5 d-flex align-items-center bg-light px-3 mb-0" 
+            <a href="https://inumagic.github.io/osa/" class="h5 d-flex align-items-center bg-light px-3 mb-0" 
               style="height: 100px; width: 100%; display: flex; align-items: center;">以為只是打呼？小心是致命的睡眠呼吸中止症！</a>
           </div>
             
