--- a/index.html
+++ b/index.html
@@ -149,11 +149,18 @@
               style="height: auto; width: 100%; display: flex; align-items: center;">為什麼小孩牙齒亂、鼻子過敏、學習力差？竟然是「它」惹的禍！</a>
     </div>
 
-     <div class="d-flex rounded overflow-hidden mb-3">
+    <div class="d-flex rounded overflow-hidden mb-3">
             <img class="img-fluid" src="img/2.png" style="width: 500px; height: auto; object-fit: cover;" alt="">
             <a href="https://inumagic.github.io/osa/" class="h8 d-flex align-items-center bg-light px-3 mb-0" 
               style="height: auto; width: 100%; display: flex; align-items: center;">以為只是打呼？小心是致命的睡眠呼吸中止症！</a>
     </div>
+
+    <div class="d-flex rounded overflow-hidden mb-3">
+            <img class="img-fluid" src="img/100.jpg" style="width: 500px; height: auto; object-fit: cover;" alt="">
+            <a href="https://www.inumagic.com/article/312" class="h8 d-flex align-items-center bg-light px-3 mb-0" 
+              style="height: auto; width: 100%; display: flex; align-items: center;">牙周病影響全身健康？這些疾病竟然都和牙齦炎有關！</a>
+    </div>
+        
     </a>    
     </div>
 
