--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     </div>
 
     <div class="d-flex rounded overflow-hidden mb-3">
-            <img class="img-fluid" src="img/6.jpg" style="width: 500px; height: auto; object-fit: cover;" alt="">
+            <img class="img-fluid" src="img/6.png" style="width: 500px; height: auto; object-fit: cover;" alt="">
             <a href="https://www.inumagic.com/article/312" class="h8 d-flex align-items-center bg-light px-3 mb-0" 
               style="height: auto; width: 100%; display: flex; align-items: center;">牙周病影響全身健康？這些疾病竟然都和牙齦炎有關！</a>
     </div>
