--- a/index.html
+++ b/index.html
@@ -150,15 +150,15 @@
     </div>
 
     <div class="d-flex rounded overflow-hidden mb-3">
-            <img class="img-fluid" src="img/2.png" style="width: 500px; height: auto; object-fit: cover;" alt="">
+            <img class="img-fluid" src="img/2.png" style="width: 200px; height: auto; object-fit: cover;" alt="">
             <a href="https://inumagic.github.io/osa/" class="h8 d-flex align-items-center bg-light px-3 mb-0" 
-              style="height: auto; width: 100%; display: flex; align-items: center;">以為只是打呼？小心是致命的睡眠呼吸中止症！</a>
+              style="height: auto; width: 100%; display: flex; align-items: center;  font-size: 1.2rem;">以為只是打呼？小心是致命的睡眠呼吸中止症！</a>
     </div>
 
     <div class="d-flex rounded overflow-hidden mb-3">
-            <img class="img-fluid" src="img/6.png" style="width: 500px; height: auto; object-fit: cover;" alt="">
+            <img class="img-fluid" src="img/6.png" style="width: 200px; height: auto; object-fit: cover;" alt="">
             <a href="https://www.inumagic.com/article/312" class="h8 d-flex align-items-center bg-light px-3 mb-0" 
-              style="height: auto; width: 100%; display: flex; align-items: center;">牙周病影響全身健康？這些疾病竟然都和牙齦炎有關！</a>
+              style="height: auto; width: 100%; display: flex; align-items: center;  font-size: 1.2rem;">牙周病影響全身健康？這些疾病竟然都和牙齦炎有關！</a>
     </div>
         
     </a>    
