--- a/treatment.html
+++ b/treatment.html
@@ -116,6 +116,11 @@
             </div>
             </div>
 
+<audio controls>
+  <source src="your-audio-file.mp3" type="audio/audio1.mp3">
+</audio>
+
+                
     <!-- 右側文字 -->
     <div class="col-md-6">
             <p><strong>配戴時段建議（家長必讀）</strong></p>
